--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,26 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TuRiMo</title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+
 </head>
+
 <body>
 
 
+  <!-- SCRIPTS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+  <script src="/__/firebase/8.2.2/firebase-app.js"></script>
+  <script src="/__/firebase/8.2.2/firebase-auth.js"></script>
+  <script src="/__/firebase/8.2.2/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
-
   <script>
     var firebaseConfig = {
       apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
@@ -23,5 +34,10 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
+
+
+
+
 </body>
+
 </html>
