--- a/public/auth.html
+++ b/public/auth.html
@@ -6,7 +6,6 @@
   <title>TuRiMo</title>
 
   <!-- CSS -->
-  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -15,9 +14,10 @@
 <body>
 
   <div class="row">
-      <div class="col s7 push-s5"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div>
-      <div class="col s5 pull-s7"><span class="flow-text">5-columns wide pulled to the left by 7-columns.</span></div>
-    </div>
+    <div class="col s7 push-s5"><span class="flow-text">This div is 7-columns wide on pushed to the right by
+        5-columns.</span></div>
+    <div class="col s5 pull-s7"><span class="flow-text">5-columns wide pulled to the left by 7-columns.</span></div>
+  </div>
   <div class="row">
     <form class="col s12" id="signup-form">
       <div class="row">
@@ -80,11 +80,11 @@
 
 
   <!-- SCRIPTS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
   <script>
-    var firebaseConfig = {
+    const firebaseConfig = {
       apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
       authDomain: "turimoapp.firebaseapp.com",
       projectId: "turimoapp",
@@ -93,16 +93,10 @@
       appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
       measurementId: "G-FQ8LEKM1J2"
     };
-    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-    // Shorcut firebase.auth to auth
     const auth = firebase.auth();
   </script>
 
-  <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
-  <script src="/__/firebase/8.2.2/firebase-auth.js"></script>
-
-  <script src="js/index.js" type="text/javascript"></script>
   <script src="js/auth.js" type="text/javascript"></script>
 
 </body>
