--- a/public/index.html
+++ b/public/index.html
@@ -2,54 +2,22 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TuRiMo</title>
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="css/forms.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>TuRiMo | SignUp</title>
 </head>
 
 <body>
   <div class="container">
     <div class="form-container log-in-container">
       <form id="signup-form">
-        <h1>Sign Up</h1>
-
-        <a class="waves-effect waves-light btn" id="googleSignIn">
-          <i class="material-icons left">cloud</i>
-          Google Sign In
-        </a>
-        <a class="waves-effect waves-light btn" id="facebookSignIn">
-          <i class="material-icons left">facebook</i>
-          Facebook Sign In
-        </a>
-
-        <span>OR</span>
-
-        <input id="signup-email" type="email" placeholder="Email" class="validate" required>
-        <input id="signup-password" type="password" placeholder="Password" class="validate" required>
-
-        <button>Sign Up</button>
-        <p id="userName"></p>
-      </form>
+        <h1 id="userName">MY NAME IS</h1>
     </div>
 
     <div class="overlay-container">
       <div class="overlay">
         <div class="overlay-panel overlay-right">
-          <form class="" id="login-form">
-            <input id="login-email" type="email" placeholder="Email" class="validate" required>
-            <input id="login-password" type="password" placeholder="Password" class="validate" required>
-
-            <button>Log In</button>
-
-          </form>
-
-
-          <a class="waves-effect waves-light btn logged-in" href="#!" id="signout"><i
-              class="material-icons">close</i>Sign out</a>
 
         </div>
       </div>
@@ -75,13 +43,11 @@
       appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
       measurementId: "G-FQ8LEKM1J2"
     };
-    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-    // Shorcut firebase.auth to auth
     const auth = firebase.auth();
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="js/index.js" type="text/javascript"></script>
+
   <script src="js/auth.js" type="text/javascript"></script>
 
 </body>
