--- a/public/auth.html
+++ b/public/auth.html
@@ -21,7 +21,7 @@
 
           <a class="waves-effect waves-light btn" id="googleSignIn">
             <i class="material-icons left">cloud</i>
-            Google Sign In
+            Google Sign
           </a>
           <a class="waves-effect waves-light btn" id="facebookSignIn">
             <i class="material-icons left">facebook</i>
