--- a/public/auth.html
+++ b/public/auth.html
@@ -21,7 +21,7 @@
 
           <a class="waves-effect waves-light btn" id="googleSignIn">
             <i class="material-icons left">cloud</i>
-            Google Sign
+            Google Sign In
           </a>
           <a class="waves-effect waves-light btn" id="facebookSignIn">
             <i class="material-icons left">facebook</i>
@@ -41,6 +41,18 @@
         <div class="overlay">
           <div class="overlay-panel overlay-right">
             <form class="" id="login-form">
+              <h1>Log In</h1>
+
+          <a class="waves-effect waves-light btn" id="googleSignIn">
+            <i class="material-icons left">cloud</i>
+            Google Sign In
+          </a>
+          <a class="waves-effect waves-light btn" id="facebookSignIn">
+            <i class="material-icons left">facebook</i>
+            Facebook Sign In
+          </a>
+
+          <span>OR</span>
               <input id="login-email" type="email" placeholder="Email" class="validate" required>
               <input id="login-password" type="password" placeholder="Password" class="validate" required>
 
