--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <div class="overlay-container">
       <div class="overlay">
         <div class="overlay-panel overlay-right">
+          <a class="waves-effect waves-light btn logged-in" href="#!" id="signout"><i
+            class="material-icons">close</i>Sign out</a>
 
         </div>
       </div>
