--- a/public/auth.html
+++ b/public/auth.html
@@ -49,23 +49,12 @@
             </form>
 
 
-            <a class="waves-effect waves-light btn logged-in" href="#!" id="signout"><i
-                class="material-icons">close</i>Sign out</a>
+            
 
           </div>
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -86,7 +75,8 @@
       firebase.initializeApp(firebaseConfig);
       const auth = firebase.auth();
     </script>
-    <script src="js/auth.js" type="text/javascript"></script>
+
+    <script src="js/register.js" type="text/javascript"></script>
 
   </body>
 
