--- a/public/register.html
+++ b/public/register.html
@@ -1,31 +1,40 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <link rel="stylesheet" href="css/forms.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TuRiMo | Sign Up Now for Free</title>
+
+  <!-- CSS -->
+  <link href="css/forms.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>TuRiMo | SignUp</title>
+
 </head>
 
 <body>
-  <div class="container">
-    <div class="form-container log-in-container">
-      <form id="signup-form">
-        <h1 id="userName">MY NAME IS</h1>
-        <h1 id="p"></h1>
-    </div>
 
-    <div class="overlay-container">
-      <div class="overlay">
-        <div class="overlay-panel overlay-right">
-          <button id="signout">SignOut</button>
+  <body>
+    <div class="container">
+      <div class="form-container log-in-container">
+        <form id="signup-form">
+          <h1>Sign Up</h1>
+
+          <span>OR</span>
+
+          <input id="signup-email" type="email" placeholder="Email" class="validate" required>
+          <input id="signup-password" type="password" placeholder="Password" class="validate" required>
+
+          <button>Sign Up</button>
+        </form>
+      </div>
+
+      <div class="overlay-container">
+        <div class="overlay">
+          <div class="overlay-panel overlay-right">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-
 
 
   <!-- JavaScript -->
@@ -33,7 +42,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-storage.js"></script>
-
+  
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
@@ -50,10 +59,10 @@
     const storage = storage.auth();
   </script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="js/index.js" type="text/javascript"></script>
-  <script src="js/signout.js" type="text/javascript"></script>
+    
+    <script src="js/login.js" type="text/javascript"></script>
+    <script src="js/register.js" type="text/javascript"></script>
 
-</body>
+  </body>
 
 </html>
