--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         <div class="overlay-panel overlay-right">
           <a class="waves-effect waves-light btn logged-in" href="#!" id="signout"><i
             class="material-icons">close</i>Sign out</a>
+            <button id="signout">Sign out</button>
 
         </div>
       </div>
