--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,7 @@
   <!-- CSS -->
   <link href="css/forms.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -19,26 +20,22 @@
               <h1>LOG IN</h1>
 
           <a class="waves-effect waves-light btn" id="googleSignIn">
-            <i class="material-icons left">cloud</i>
-            <button>Google Log In</button>
+            <button class="google"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
+            Google Log In</button>
           </a>
           <a class="waves-effect waves-light btn" id="facebookSignIn">
-            <i class="material-icons left">facebook</i>
-            <button>Facebook Log In</button>
+            <button class="facebook"><i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>
+            Facebook Log In</button>
           </a>
 
-          <span>OR</span>
+          <span style="font-size: 15px;">OR</span>
               <input id="login-email" type="email" placeholder="Email" class="validate" required>
               <input id="login-password" type="password" placeholder="Password" class="validate" required>
 
-              <button>Log In</button>
+              <button style="font-size: 12px;">Log In</button>
 
             </form>
             
-
-
-            
-
           </div>
           <div class="overlay-container">
             <div class="overlay">
