--- a/public/register.html
+++ b/public/register.html
@@ -8,6 +8,7 @@
   <!-- CSS -->
   <link href="css/forms.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -18,23 +19,12 @@
       <div class="form-container log-in-container">
         <form id="signup-form">
           <h1>SIGN UP NOW</h1>
-
-          <a class="waves-effect waves-light btn" id="googleSignIn">
-            <i class="material-icons left">cloud</i>
-           <button> Google Sign In</button>
-          </a>
-          <a class="waves-effect waves-light btn" id="facebookSignIn">
-            <i class="material-icons left">facebook</i>
-            <button>Facebook Sign In</button>
-          </a>
-
-          <span>OR</span>
-
+&nbsp;
           <input id="signup-email" type="email" placeholder="Email" class="validate" required>
           <input id="signup-password" type="password" placeholder="Password" class="validate" required>
-
-          <button>SIGN UP</button>
-&nbsp
+&nbsp;
+          <button style="font-size: 12px;">SIGN UP</button>
+&nbsp;
           <h4> ALREADY A MEMBER?  <a href="login.html"> Click here.</a></h4>
         </form>
       </div>
