--- a/public/index.html
+++ b/public/index.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <link rel="stylesheet" href="css/forms.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>TuRiMo | SignUp</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TuRiMo | Tullahan River Monitoring</title>
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
+
 </head>
 
 <body>
-  <div class="container">
-    <div class="form-container log-in-container">
-      <form id="signup-form">
-        <h1 id="userName">MY NAME IS</h1>
-        <h1 id="p"></h1>
-    </div>
 
-    <div class="overlay-container">
-      <div class="overlay">
-        <div class="overlay-panel overlay-right">
-          <button id="signout">SignOut</button>
+
+
+    <div class="container-fluid">
+        <div id="rcorners1"></div>
+        <div class="container2">
+
+            <div class="form-group">
+                <textarea class="form-control" placeholder="Write Something...." rows="5" id="comment"></textarea>
+            </div>
+            <button style="background-color: blue;" class="button button2">SEND</button>
+
         </div>
-      </div>
     </div>
-  </div>
 
 
+    <!-- JavaScript -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-storage.js"></script>
 
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
+            authDomain: "turimoapp.firebaseapp.com",
+            projectId: "turimoapp",
+            storageBucket: "turimoapp.appspot.com",
+            messagingSenderId: "905578158491",
+            appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
+            measurementId: "G-FQ8LEKM1J2"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+    </script>
 
-  <!-- JavaScript -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-storage.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
-      authDomain: "turimoapp.firebaseapp.com",
-      projectId: "turimoapp",
-      storageBucket: "turimoapp.appspot.com",
-      messagingSenderId: "905578158491",
-      appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
-      measurementId: "G-FQ8LEKM1J2"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const firestore = firestore.auth();
-    const storage = storage.auth();
-  </script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="js/index.js" type="text/javascript"></script>
-  <script src="js/signout.js" type="text/javascript"></script>
+    <script src="js/index.js" type="text/javascript"></script>
+    <script src="js/signout.js" type="text/javascript"></script>
 
 </body>
 
