--- a/public/login.html
+++ b/public/login.html
@@ -1,85 +1,70 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TuRiMo | Welcome Back</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome Back | TuRiMo</title>
 
-  <!-- CSS -->
-  <link href="css/forms.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- CSS -->
+    <link href="css/forms.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
-<body>
+<body style="background-image: url('images/tullahan.jpg');">
+    <div class="container">
+        <div class="form-container log-in-container">
+            <form id="login-form">
+                <h1>Sign In</h1>
 
-  <div class="container">
-    <div class="form-container log-in-container">
-      <form id="login-form">
-        <h1>Welcome Back User</h1>
+                <button class="google" id="googleSignIn"><i class="fa fa-google fa-lg" aria-hidden="true"></i>
+                  Log In with Google</button>
+                <button class="facebook" id="facebookSignIn"><i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>
+                  Log In with Facebook </button>
 
-        <a class="waves-effect waves-light btn" id="googleSignIn">
-          <i class="material-icons left">cloud</i>
-          Google Sign In
-        </a>
-        <a class="waves-effect waves-light btn" id="facebookSignIn">
-          <i class="material-icons left">facebook</i>
-          Facebook Sign In
-        </a>
+                <span style="font-size: 15px;">OR</span>
 
-        <span>OR</span>
+                <input id="login-email" type="email" placeholder="Email" class="validate" required>
+                <input id="login-password" type="password" placeholder="Password" class="validate" required>
 
-        <input id="login-email" type="email" placeholder="Email" class="validate" required>
-        <input id="login-password" type="password" placeholder="Password" class="validate" required>
-
-        <button>Log In</button>
-      </form>
-    </div>
-
-    <div class="overlay-container">
-      <div class="overlay">
-        <div class="overlay-panel overlay-right">
-
+                <button style="font-size: 12px;">Log In</button>
+                <h4> NOT YET A MEMBER? <a href="register.html"> Click here.</a></h4>
+            </form>
         </div>
-      </div>
+
+        <div class="overlay-container">
+            <div class="overlay">
+                <div class="overlay-panel overlay-right">
+                    <h1>TULLAHAN RIVER MONITORING WEB APP</h1>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
+    <!-- JavaScript -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-storage.js"></script>
 
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
+            authDomain: "turimoapp.firebaseapp.com",
+            projectId: "turimoapp",
+            storageBucket: "turimoapp.appspot.com",
+            messagingSenderId: "905578158491",
+            appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
+            measurementId: "G-FQ8LEKM1J2"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+        const firestore = firestore.auth();
+        const storage = storage.auth();
+    </script>
 
-
-
-
-
-
-
-
-
-
-  <!-- JavaScript -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-storage.js"></script>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
-      authDomain: "turimoapp.firebaseapp.com",
-      projectId: "turimoapp",
-      storageBucket: "turimoapp.appspot.com",
-      messagingSenderId: "905578158491",
-      appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
-      measurementId: "G-FQ8LEKM1J2"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const firestore = firestore.auth();
-    const storage = storage.auth();
-  </script>
-
-  <script src="js/auth.js" type="text/javascript"></script>
-  <script src="js/login.js" type="text/javascript"></script>
+    <script src="js/auth.js" type="text/javascript"></script>
+    <script src="js/login.js" type="text/javascript"></script>
 
 
 </body>
