--- a/public/register.html
+++ b/public/register.html
@@ -1,68 +1,66 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TuRiMo | Sign Up Now for Free</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Sign Up | TuRiMo</title>
 
-  <!-- CSS -->
-  <link href="css/forms.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- CSS -->
+    <link href="css/forms.css" rel="stylesheet">
+
 
 </head>
 
-<body>
-
-  <body>
+<body style="background-image: url('images/tullahan.jpg');">
     <div class="container">
-      <div class="form-container log-in-container">
-        <form id="signup-form">
-          <h1>Sign Up</h1>
-
-          <span>OR</span>
-
-          <input id="signup-email" type="email" placeholder="Email" class="validate" required>
-          <input id="signup-password" type="password" placeholder="Password" class="validate" required>
-
-          <button>Sign Up</button>
-        </form>
-      </div>
-
-      <div class="overlay-container">
-        <div class="overlay">
-          <div class="overlay-panel overlay-right">
-          </div>
+        <div class="form-container log-in-container">
+            <form id="signup-form">
+                <h1>Sign Up</h1>
+                <input type="text" class="validate" id="userFullName" onblur="checkUserFullName()" placeholder="First Name">
+                <input type="text" class="validate" id="userSurname" onblur="checkUserSurname()" placeholder="Last Name">
+                <input id="signup-email" type="email" placeholder="Email Address" class="validate" required>
+                <input id="signup-password" type="password" placeholder="Password" class="validate" required>
+                <button style="font-size: 12px;">SIGN UP</button>
+                <h4> ALREADY A MEMBER? <a href="login.html"> Click here.</a></h4>
+            </form>
         </div>
-      </div>
+
+        <div class="overlay-container">
+            <div class="overlay">
+                <div class="overlay-panel overlay-right">
+                    <h1>TULLAHAN RIVER MONITORING WEB APP</h1>
+                </div>
+            </div>
+        </div>
     </div>
 
 
-  <!-- JavaScript -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-storage.js"></script>
-  
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
-      authDomain: "turimoapp.firebaseapp.com",
-      projectId: "turimoapp",
-      storageBucket: "turimoapp.appspot.com",
-      messagingSenderId: "905578158491",
-      appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
-      measurementId: "G-FQ8LEKM1J2"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const firestore = firestore.auth();
-    const storage = storage.auth();
-  </script>
+    <!-- JavaScript -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-storage.js"></script>
 
-    
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
+            authDomain: "turimoapp.firebaseapp.com",
+            projectId: "turimoapp",
+            storageBucket: "turimoapp.appspot.com",
+            messagingSenderId: "905578158491",
+            appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
+            measurementId: "G-FQ8LEKM1J2"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+        const firestore = firestore.auth();
+        const storage = storage.auth();
+    </script>
+
+
     <script src="js/login.js" type="text/javascript"></script>
     <script src="js/register.js" type="text/javascript"></script>
 
-  </body>
+</body>
 
 </html>
