--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TuRiMo | Tullahan River Monitoring</title>
 
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
@@ -15,7 +14,25 @@
 
 <body>
 
+    <nav>
+        <div class="nav-wrapper green">
+            <a href="#!" class="brand-logo">Tullahan River Monitoring</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="stream.html">Stream</a></li>
+                <li><a href="news.html">News</a></li>
+                <li class="logged-in"><a id="signout"><i class="material-icons">close</i>Sign out</a></li>
+            </ul>
+        </div>
+    </nav>
 
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="home.html">Home</a></li>
+        <li><a href="stream.html">Stream</a></li>
+        <li><a href="news.html">News</a></li>
+        <li class="logged-in"><a class="waves-effect" href="#!" id="signout"><i class="material-icons">close</i>Sign out</a></li>
+    </ul>
 
     <div class="container-fluid">
         <div id="rcorners1"></div>
@@ -49,10 +66,14 @@
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
     </script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $(".sidenav").sidenav();
+        });
+    </script>
 
     <script src="js/index.js" type="text/javascript"></script>
     <script src="js/signout.js" type="text/javascript"></script>
