--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
 <body>
 
     <nav>
-        <div class="nav-wrapper green">
+        <div class="nav-wrapper green darken-2">
             <a href="#!" class="brand-logo">Tullahan River Monitoring</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="stream.html">Stream</a></li>
                 <li><a href="news.html">News</a></li>
-                <li class="logged-in"><a id="signout"><i class="material-icons">close</i>Sign out</a></li>
+                <button id="signout">Sign out</button>
             </ul>
         </div>
     </nav>
@@ -31,7 +31,7 @@
         <li><a href="home.html">Home</a></li>
         <li><a href="stream.html">Stream</a></li>
         <li><a href="news.html">News</a></li>
-        <li class="logged-in"><a class="waves-effect" href="#!" id="signout"><i class="material-icons">close</i>Sign out</a></li>
+        <button id="signout">Sign out</button>
     </ul>
 
     <div class="container-fluid">
