--- a/public/index.html
+++ b/public/index.html
@@ -2,30 +2,28 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="css/forms.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>TuRiMo | SignUp</title>
+    <link rel="stylesheet" href="css/forms.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>TuRiMo | SignUp</title>
 </head>
 
 <body>
-  <div class="container">
-    <div class="form-container log-in-container">
-      <form id="signup-form">
-        <h1 id="userName">MY NAME IS</h1>
-    </div>
-
-    <div class="overlay-container">
-      <div class="overlay">
-        <div class="overlay-panel overlay-right">
-          <a class="waves-effect waves-light btn logged-in" href="#!" id="signout"><i
-            class="material-icons">close</i>Sign out</a>
-            <button id="signout">Sign out</button>
-
+    <div class="container">
+        <div class="form-container log-in-container">
+            <form id="signup-form">
+                <h1 id="userName">MY NAME IS</h1>
         </div>
-      </div>
+
+        <div class="overlay-container">
+            <div class="overlay">
+                <div class="overlay-panel overlay-right">
+                    <a class="waves-effect waves-light btn logged-in" href="" id="signout"><i
+            class="material-icons">close</i>Sign out</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
 
 
@@ -33,25 +31,25 @@
 
 
 
-  <!-- javascript list -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
-      authDomain: "turimoapp.firebaseapp.com",
-      projectId: "turimoapp",
-      storageBucket: "turimoapp.appspot.com",
-      messagingSenderId: "905578158491",
-      appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
-      measurementId: "G-FQ8LEKM1J2"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- javascript list -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
+            authDomain: "turimoapp.firebaseapp.com",
+            projectId: "turimoapp",
+            storageBucket: "turimoapp.appspot.com",
+            messagingSenderId: "905578158491",
+            appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
+            measurementId: "G-FQ8LEKM1J2"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-  <script src="js/auth.js" type="text/javascript"></script>
+    <script src="js/auth.js" type="text/javascript"></script>
 
 </body>
 
