--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
     <title>Welcome Back | TuRiMo</title>
 
     <!-- CSS -->
-    <link href="css/forms.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
