--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
 
 </head>
 
@@ -38,7 +37,7 @@
 
 
     <div class="row">
-        <form class="col s12" id="newComment">
+        <form class="col s12" id="createComment">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">title</i>
@@ -48,10 +47,9 @@
             </div>
             <button class="btn waves-effect waves-light">Send
               <i class="material-icons right">send</i>
-          </button>
-
-
+          </button> Not logged in. <a href="login.html">Log in here first</a>
         </form>
+
 
     </div>
 
@@ -78,13 +76,7 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $(".sidenav").sidenav();
-        });
-    </script>
     <script src="js/comment.js" type="text/javascript"></script>
-    <script src="js/index.js" type="text/javascript"></script>
     <script src="js/signout.js" type="text/javascript"></script>
 
 </body>
