--- a/public/register.html
+++ b/public/register.html
@@ -16,8 +16,8 @@
         <div class="form-container log-in-container">
             <form id="signup-form">
                 <h1>Sign Up</h1>
-                <input type="text" class="validate" id="userFullName" onblur="checkUserFullName()" placeholder="First Name">
-                <input type="text" class="validate" id="userSurname" onblur="checkUserSurname()" placeholder="Last Name">
+                <input type="text" class="validate" id="firstName" placeholder="First Name">
+                <input type="text" class="validate" id="lastName" placeholder="Last Name">
                 <input id="signup-email" type="email" placeholder="Email Address" class="validate" required>
                 <input id="signup-password" type="password" placeholder="Password" class="validate" required>
                 <button style="font-size: 12px;">SIGN UP</button>
@@ -57,8 +57,6 @@
         const storage = storage.auth();
     </script>
 
-
-    <script src="js/login.js" type="text/javascript"></script>
     <script src="js/register.js" type="text/javascript"></script>
 
 </body>
