--- a/public/index.html
+++ b/public/index.html
@@ -18,31 +18,26 @@
             <a href="#!" class="brand-logo">Tullahan River Monitoring</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="stream.html">Stream</a></li>
                 <li><a href="news.html">News</a></li>
-                <form id="signup-form">
-                    <button>Sign out</button>
-                </form>
-            </ul>
+                <form id="logged-out"><a class="waves-effect waves-light btn logged-in" href="#!" id="signout">Sign out</a></form>
+
         </div>
     </nav>
 
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="stream.html">Stream</a></li>
         <li><a href="news.html">News</a></li>
-        <button id="signout">Sign out</button>
     </ul>
-
-
     <div class="row">
         <form class="col s12" id="createComment">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">title</i>
-                    <textarea id="commentContent" class="materialize-textarea" required></textarea>
-                    <label for="commentContent">Comment Now</label>
+                    <textarea id="content" class="materialize-textarea" required></textarea>
+                    <label for="content">Comment Now</label>
                 </div>
             </div>
             <button class="btn waves-effect waves-light">Send
@@ -72,8 +67,8 @@
         };
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
+        const db = firebase.firestore();
     </script>
-    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script src="js/comment.js" type="text/javascript"></script>
