--- a/index.html
+++ b/index.html
@@ -1,103 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-  <link rel="stylesheet" href="css/forms.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>TuRiMo | SignUp</title>
-  <style>
-.container-fluid{
-  margin-bottom: 20px;
-  background-color:whitesmoke;
-  width: 1000px;
-}
-
-#rcorners1{
-  border-radius: 100px;
-  padding: 10px;
-  background-color:grey;
-  width: 90px;
-  height: 90px;
-  margin-bottom: 10px;
-  margin-right: 650px;
-  border-style: solid;
-  border-color: white;
-}
-.container1 {
-  width: 50px;
-  background-color: whitesmoke;
-}
-.container2{
-  width: 750px;
-  height: 80px;
-  background-color:transparent;
-
-}
-
-    
-  </style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
-
-
-  <div class="container-fluid">
-
-    </div>
-    <div class="container">
-    </div>
+<style>
+body 
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+.topnav #myLinks {
+  display: none;
+}
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration:solid;
+  font-size: 30px;
+  display: block;
+  text-align: center;
+}
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+</style>
+    <body>
+        <div class="topnav">
+  <a href="#home" class="active">Tullahan River Monitoring</a>
+  <div id="myLinks">
+    <a href="#news">Home</a>
+    <a href="#contact">Stream</a>
+    <a href="#about">News</a>
   </div>
-  
-
-
-<p id = "rcorners1"></p>
-<div class="container2">
- 
-  <div class="form-group">
-    <textarea class="form-control"  placeholder="Write Something...." rows="5" id="comment"></textarea>
-  </div>
-  <button style="background-color: blue;" class="button button2">SEND</button>
- 
-</div>
-
-        </div>
-      </div>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
     </div>
-  </div>
+    <div class="row">
+        <form class="col s12" id="createComment">
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">title</i>
+                    <textarea id="commentContent" class="materialize-textarea" required></textarea>
+                    <label for="commentContent">Comment Now</label>
+                </div>
+              </div>
+            <button class="btn waves-effect waves-light">Send
+              <i class="material-icons right">send</i>
+          </button> Not logged in. <a href="login.html">Log in here first</a>
+        </form>
+    </div>
 
+    <!-- JavaScript -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-storage.js"></script>
 
-
-
-
-
-
-  <!-- javascript list -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
-      authDomain: "turimoapp.firebaseapp.com",
-      projectId: "turimoapp",
-      storageBucket: "turimoapp.appspot.com",
-      messagingSenderId: "905578158491",
-      appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
-      measurementId: "G-FQ8LEKM1J2"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-  <script src="js/auth.js" type="text/javascript"></script>
-
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBDIdZpV2NPJgpPzCA8C5LXf4aTV_6EbFU",
+            authDomain: "turimoapp.firebaseapp.com",
+            projectId: "turimoapp",
+            storageBucket: "turimoapp.appspot.com",
+            messagingSenderId: "905578158491",
+            appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
+            measurementId: "G-FQ8LEKM1J2"
+            };
+            firebase.initializeApp(firebaseConfig);
+            const auth = firebase.auth();
+    </script>
+    <script>
+    function myFunction() {
+      var x = document.getElementById("myLinks");
+      if (x.style.display === "block") {
+      x.style.display = "none";
+      } else {
+      x.style.display = "block";
+      }
+      }
+</script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/comment.js" type="text/javascript"></script>
+    <script src="js/signout.js" type="text/javascript"></script>
 </body>
-
 </html>
