--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 
 <body>
 
+    
+
     <nav>
         <div class="nav-wrapper green darken-2">
             <a href="#!" class="brand-logo">Tullahan River Monitoring</a>
@@ -25,6 +27,10 @@
 
         </div>
     </nav>
+
+    <div class=showComment>
+        
+    </div>
 
     <ul class="sidenav" id="mobile-demo">
         <li><a href="index.html">Home</a></li>
