--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="stream.html">Stream</a></li>
                 <li><a href="news.html">News</a></li>
-                <form id="logged-out"><a class="waves-effect waves-light btn logged-in" href="#!" id="signout">Sign out</a></form>
+                <li>
+                    <form id="signup-form"></form><a class="waves-effect waves-light btn logged-in" href="#!" id="signout">Sign out</a></li>
+            </ul>
 
         </div>
     </nav>
@@ -31,6 +33,7 @@
         <li><a href="stream.html">Stream</a></li>
         <li><a href="news.html">News</a></li>
     </ul>
+
     <div class="row">
         <form class="col s12" id="createComment">
             <div class="row">
@@ -42,9 +45,9 @@
             </div>
             <button class="btn waves-effect waves-light">Send
               <i class="material-icons right">send</i>
-          </button> Not logged in. <a href="login.html">Log in here first</a>
+          </button>
+            <span class="logged-out">Not logged in.<a href="login.html">Log in here first</a></span>
         </form>
-
 
     </div>
 
@@ -69,8 +72,10 @@
         const auth = firebase.auth();
         const db = firebase.firestore();
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+    <script src="js/index.js" type="text/javascript"></script>
     <script src="js/comment.js" type="text/javascript"></script>
     <script src="js/signout.js" type="text/javascript"></script>
 
