--- a/public/login.html
+++ b/public/login.html
@@ -58,9 +58,10 @@
             measurementId: "G-FQ8LEKM1J2"
         };
         firebase.initializeApp(firebaseConfig);
+
         const auth = firebase.auth();
-        const firestore = firestore.auth();
-        const storage = storage.auth();
+        const firestore = firebase.firestore();
+        const storage = firebase.storage();
     </script>
 
     <script src="js/auth.js" type="text/javascript"></script>
