adding comment pagination

--- a/public/stream.html
+++ b/public/stream.html
@@ -49,14 +49,13 @@
         </div>
 
         <!-- POST COMMENT -->
-
-        <form class="col s12" id="createComment">
+        <form class="col s12 " id="createComment">
             <div class="row">
                 <div class="container">
                     <div class="input-field col s12">
-                        <i class="material-icons prefix">insert_comment</i>
+                        <i class="material-icons prefix green-text">insert_comment</i>
                         <textarea id="content" class="materialize-textarea" required></textarea>
-                        <label for="content">Write Something...</label>
+                        <label class="green-text" for="content">Leave a comment here...</label>
                     </div>
                     <button class="btn waves-effect green waves-light disabled" id="hide">Submit
                     <i class="material-icons right">send</i>
@@ -72,6 +71,12 @@
     <ul class="collection comment ">
 
     </ul>
+
+    <!-- PAGINATION -->
+    <div class="nextPage">
+        <button class="center-align">See More...</button>
+    </div>
+
 
 
 
