--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <!-- FIRST COLUMN -->
     <div class="row">
         <div class="container">
-            <div class="col s4">
+            <div class="col s12 l4">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
                         <span class="card-title">Card Title</span>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 l4">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
                         <span class="card-title">Card Title</span>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 l4">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
                         <span class="card-title">Card Title</span>
