revision of index

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TuRiMo | Tullahan River Monitoring</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="css/index.css" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -17,7 +18,7 @@
     <nav>
         <div class="nav-wrapper green">
             <div class="container">
-                <a href="index.html" class="brand-logo">Tullahan River Monitoring</a>
+                <a href="index.html" class="brand-logo">TuRiMo</a>
                 <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li class="active"><a href="index.html">Home</a></li>
@@ -30,41 +31,119 @@
     </nav>
 
     <ul class="sidenav" id="mobile-menu">
+        <li class="sidenav-header green">
+            <div class="row">
+                <div class="col s4">
+                    <img src="images/green_smile.png" width="48px" height="48px" alt="avatar" class="circle responsive-img valign profile-image">
+                </div>
+                <div class="col s8">
+                    <a class="btn-flat dropdown-button waves-effect waves-light white-text" href="#">MY NAME<i class="mdi-navigation-arrow-drop-down right"></i></a>
+                </div>
+            </div>
+        </li>
         <li class="active"><a href="index.html"><i class="small material-icons">home</i>Home</a></li>
         <li><a href="stream.html"><i class="small material-icons">stream</i>Stream</a></li>
         <li><a href="news.html"><i class="small material-icons">import_contacts</i>News</a></li>
         <li class="logged-in"><a href="#!" id="signout"><i class="small material-icons">close</i>Sign out</a></li>
     </ul>
 
-    <!-- FIRST COLUMN -->
-    <div class="row">
+    <!-- Content -->
+    <div class="parallax-container center valign-wrapper">
         <div class="container">
-            <div class="col s12 l4">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                    </div>
+            <div class="row">
+                <div class="col s12 white-text">
+                    <h2 class="green-text lighten-2">TULLAHAN RIVER MONITORING</h2>
+                    <p>Get the latest news and updates about your local river.</p>
+                    <a class="waves-effect waves-light btn-large green">Get Started</a>
                 </div>
             </div>
-            <div class="col s12 l4">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                    </div>
+        </div>
+
+        <div class="parallax">
+            <img src="images/tullahan1.jpg">
+        </div>
+
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <p class="light left-align">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices
+                eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices
+                erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+            </p>
+            <div class="col m4 s12">
+                <div class="icon-block">
+                    <h2 class="center green-text">
+                        <i class="material-icons">flash_on</i>
+                    </h2>
+                    <h5 class="center">LEVEL 1</h5>
+                    <p class="light">
+                        We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+                    </p>
+                </div>
+
+            </div>
+            <div class="col m4 s12">
+                <div class="icon-block">
+                    <h2 class="center green-text">
+                        <i class="material-icons">group</i>
+                    </h2>
+                    <h5 class="center">LEVEL 2</h5>
+                    <p class="light">
+                        By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow
+                        for a more unified user experience.
+                    </p>
                 </div>
             </div>
-            <div class="col s12 l4">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                    </div>
+            <div class="col m4 s12">
+                <div class="icon-block">
+                    <h2 class="center green-text">
+                        <i class="material-icons">settings</i>
+                    </h2>
+                    <h5 class="center">LEVEL 3</h5>
+                    <p class="light">
+                        We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
+
+
+    <div class="parallax-container center valign-wrapper">
+        <div class="parallax"><img src="https://pbs.twimg.com/media/CJiV82sUsAAyCpu?format=jpg&name=medium">
+        </div>
+
+        <div class="container white-text">
+            <div class="row">
+                <div class="col s12">
+                    <h5>GO TO STREAM AND WATCH THE LIVE STREAM OF TULLAHAN RIVER</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="page-footer green">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Team 8</h5>
+                    <p class="grey-text text-lighten-4">
+                        We are a team of college students; Kiara Nicole R. Baliwagan, Jeraldine B. Cagatin, Analou A. Edma, Daniella S. Sevial
+                        <p> A web app project in COEN3463.</p>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2021 | Tullahan River Monitoring
+            </div>
+        </div>
+    </footer>
 
 
 
@@ -97,6 +176,10 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $(".sidenav").sidenav();
+        });
+
+        $(document).ready(function() {
+            $('.parallax').parallax();
         });
     </script>
 
