--- a/public/register.html
+++ b/public/register.html
@@ -6,7 +6,7 @@
     <title> Sign Up | TuRiMo</title>
 
     <!-- CSS -->
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/forms.css" rel="stylesheet">
 
 
 </head>
