--- a/public/login.html
+++ b/public/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Back | TuRiMo</title>
+    <title>Sign In | TuRiMo</title>
 
     <!-- CSS -->
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/forms.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
