Upload file to Storage

--- a/public/stream.html
+++ b/public/stream.html
@@ -60,7 +60,7 @@
                     <button class="btn waves-effect green waves-light disabled" id="hide">Submit
                     <i class="material-icons right">send</i>
                 </button>
-                    <span class="logged-out">Not Logged In.<a href="login.html"> Log In Here First!</a></span>
+                    <span class="logged-out">Not Logged In.<a href="login.html"> You must be login or register.</a></span>
                 </div>
             </div>
         </form>
